fix alignment

--- a/mood_booster/styles/style.css
+++ b/mood_booster/styles/style.css
@@ -90,17 +90,13 @@ header {
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    border-style: solid;
-    border-width: 10px;
-    border-color: #ffff00;
-
 }
 .meme1, .meme2, .meme3, .meme4, .meme5, .meme6 {
-    margin-bottom: 150px;
-    
+    margin-bottom: 150px; 
 }
 .meme1 {
     width: 80%;
+    margin-top: 150px;
 }
 .meme2, .meme4, .meme6 {
     max-width: 600px;
